change style: post rendering box

--- a/styles.css
+++ b/styles.css
@@ -75,11 +75,10 @@ ul {
 
 .markdown-header {
     background-color: rgba(0, 0, 0, 0.7);
-    padding: 8px;
+    padding: 0px;
+    margin-bottom: 20px;
     max-width: 800px;
-    width: 90%;
     box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
-    margin: 0 auto;
 }
 
 .markdown-header button {
@@ -87,20 +86,15 @@ ul {
     background-color: rgba(255, 255, 255, 0.1);
     border: 1px solid white;
     color: rgb(208, 255, 143);
-    padding: 8px 16px;
+    padding: 8px;
     cursor: pointer;
     transition: background-color 0.3s;
 }
 
-.markdown-header button:hover {
-    background-color: rgba(255, 255, 255, 0.2);
-}
-
 .markdown-body {
     background-color: rgba(0, 0, 0, 0.7);
-    padding: 8px;
+    padding: 0px;
     max-width: 800px;
-    width: 90%;
     box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
     margin: 0 auto;
 }
