--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,14 @@ body, html {
     font-style: normal;
 }
 
+.glow {
+    text-shadow: 
+        0 0  5px rgba(255, 255, 255, 0.1),
+        0 0 11px rgba(136, 255, 172, 0.4),
+        0 0 17px rgba(136, 255, 172, 0.801),
+        0 0 25px rgba(136, 255, 172, 0.801);
+}
+
 .box ul {
     padding-inline-start: 12px;
 }
@@ -58,7 +66,7 @@ body, html {
     border: none;
     outline: none;
     cursor: pointer;
-    padding: 4px 8px;
+    padding: 4px 6px;
 }
 
 .tab button:hover {
