--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,42 @@ body, html {
         0 0 25px rgba(136, 255, 172, 0.801);
 }
 
+
+.glow-purple {
+    text-shadow: 
+        0 0  5px rgba(255, 255, 255, 0.1),
+        0 0 11px rgba(89, 4, 247, 0.462),
+        0 0 17px rgba(89, 4, 247, 0.801),
+        0 0 25px rgba(89, 4, 247, 0.901);
+}
+
+
+.glow-aqua {
+    text-shadow: 
+        0 0  5px rgba(255, 255, 255, 0.1),
+        0 0 11px rgba(0, 255, 255, 0.462),
+        0 0 17px rgba(0, 255, 255, 0.801),
+        0 0 25px rgba(0, 255, 255, 0.901);
+}
+
+.glow-orange {
+    text-shadow: 
+        0 0  5px rgba(255, 255, 255, 0.1),
+        0 0 11px rgba(247, 117, 4, 0.462),
+        0 0 17px rgba(247, 117, 4, 0.801),
+        0 0 25px rgba(247, 142, 4, 0.901);
+}
+
+
+.glow-yellow {
+    text-shadow: 
+        0 0  5px rgba(255, 255, 255, 0.1),
+        0 0 11px rgba(255, 255, 0, 0.4),
+        0 0 17px rgba(255, 255, 0, 0.801),
+        0 0 25px rgba(255, 255, 0, 0.801);
+}
+
+
 .box ul {
     padding-inline-start: 12px;
 }
