--- a/_layouts/base.liquid
+++ b/_layouts/base.liquid
@@ -30,7 +30,7 @@
 						  <a href="/" class="navbar-brand">
                   <div>
                       <img src="/images/profile-photo.jpg" class="img-circle"></img>
-                      XXX
+                      Yunlong
                   </div>
               </a>
 						<button class="navbar-toggle" type="button" data-toggle="collapse"
@@ -54,17 +54,9 @@
 						</ul>
 						<ul class="nav navbar-nav navbar-right" style="font-size: 1.5em">
 							<li>
-								<a href="https://github.com/yourusername" target="_blank">
+								<a href="https://github.com/algorithmx" target="_blank">
 									<i class="fa fa-lg fa-github"></i></a>
 							</li>
-							<li>
-								<a href="https://twitter.com/your_twitter_handle" target="_blank">
-									<i class="fa fa-lg fa-twitter"></i></a>
-							</li>
-                            <li>
-                                <a href="https://linkedin.com/in/yourprofile" target="_blank">
-                                <i class="fa fa-lg fa-linkedin"></i></a>
-                            </li>
                             <li>
                                 <a href="/atom.xml" target="_blank">
                                     <i class="fa fa-rss"></i></a>
@@ -78,17 +70,17 @@
 
 {{ content }}
 
-  <script src="/vendor/js/bootstrap.min.js"></script>
-  <script src="/vendor/js/anchor.min.js"></script>
-  <script src="/vendor/js/jquery.toc.js"></script>
-  <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WVS15JQ8HB"></script>
+    <script src="/vendor/js/bootstrap.min.js"></script>
+    <script src="/vendor/js/anchor.min.js"></script>
+    <script src="/vendor/js/jquery.toc.js"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-NKPZFET5YT"></script>
     <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-WVS15JQ8HB');
+    gtag('config', 'G-NKPZFET5YT');
     </script>
 </body>
 
