--- a/_layouts/index.liquid
+++ b/_layouts/index.liquid
@@ -8,10 +8,10 @@ layout: base
       <div style='font-size: 2em; color: #4582ec; font-weight: bold; padding-bottom: 0.3em;'>XXX</div>
        <div style='font-size: 1.2em; margin:0.5em'>
             <p style='margin-top:0.3em'>
-            Professional title and expertise area
+            Researcher in TCAD simulation and machine-learning applications.
             </p>
             <p style='margin-top:0.3em'>
-            Brief description of interests and background.
+            PhD in condensed matter physics, can do math correctly / write programs / speak English / use LLM tools.
             </p>
       </div>
       <br/>
@@ -24,16 +24,8 @@ layout: base
 
       <ul class="list-inline idxIcons" style='font-size: 2em; margin-top: 0.5em;'>
         <li>
-          <a href="https://github.com/yourusername" target="_blank">
+          <a href="https://github.com/algorithmx" target="_blank">
             <i class="fa fa-fw fa-github"></i></a>
-        </li>
-        <li>
-          <a href="https://twitter.com/your_twitter_handle" target="_blank">
-            <i class="fa fa-fw fa-twitter"></i></a>
-        </li>
-        <li>
-          <a href="https://linkedin.com/in/yourprofile" target="_blank">
-          <i class="fa fa-fw fa-linkedin"></i></a>
         </li>
         <li>
           <a href="mailto:yourname@example.com" target="_blank" style='text-decoration: none;'>
