--- a/_layouts/index.liquid
+++ b/_layouts/index.liquid
@@ -5,7 +5,7 @@ layout: base
 <div class="container">
   <div class="row">
     <div class="col-md-6 col-md-offset-1 vcenter idxHdr">
-      <div style='font-size: 2em; color: #4582ec; font-weight: bold; padding-bottom: 0.3em;'>XXX</div>
+      <div style='font-size: 2em; color: #4582ec; font-weight: bold; padding-bottom: 0.3em;'>Yunlong</div>
        <div style='font-size: 1.2em; margin:0.5em'>
             <p style='margin-top:0.3em'>
             Researcher in TCAD simulation and machine-learning applications.
